# ChampSim-pt

./: .gitignore  CMakeLists.txt  Makefile  champsim_pt_config.json  run_champsim_pt.sh
branch/tage/: tage.cc
branch/tage-sc-l/: tage-sc-l.cc
btb/basic_btb/: basic_btb.cc
inc/: champsim.h  instruction.h  ooo_cpu.h  trace_reader.h  trace_reader_pt.h  tracereader.h
pt_results_10M/: ls.gz-bimodal-no-no-no-no-lru-1core.txt
src/: main.cc  ooo_cpu.cc  trace_reader.cc  tracereader.cc
xed_example/: main.cpp
